# Remoji-tg-mcp

./: .gitignore  README.md  pyproject.toml  requirements.txt  test_emoji.py  tg_emoji_mcp.py  txt.txt
.github/workflows/: pypi-publish.yml
remoji_tg_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
